--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,7 @@
     "@babel/plugin-transform-classes",
     "@babel/plugin-proposal-nullish-coalescing-operator",
     ["@babel/transform-runtime", {"polyfill": false}],
-    "pipe-composition"
+    "pipe-composition",
+    "@babel/plugin-transform-flow-strip-types"
   ]
 }
