--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "purge": "rm -rf ./lib ./helpers ./react",
     "build": "webpack --config ./webpack.config.js",
     "test": "cross-env NODE_ENV=test jest --colors",
-    "test:watch": "cross-env NODE_ENV=test jest --watch",
+    "test:watch": "cross-env NODE_ENV=test jest --watchAll",
     "postversion": "git push --tags"
   },
   "devDependencies": {
